--- a/views/caterpillar/_navigation.html.erb
+++ b/views/caterpillar/_navigation.html.erb
@@ -23,6 +23,8 @@
   background: url('/images/caterpillar.gif') no-repeat;
   padding: 10px 0 0 50px;
   min-height: 55px;
+  overflow: auto;
+  
   filter:alpha(opacity=81);-moz-opacity:.81;opacity:.81;
   /* css3 tags, works on Firefox and Safari */
   -moz-border-radius: 15px;
