--- a/portlet_test_bench/views/layouts/basic.html.erb
+++ b/portlet_test_bench/views/layouts/basic.html.erb
@@ -1,15 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fi" lang="fi">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <title><%= @title || "Rails286-portlet testbench" -%></title>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8"></meta>
+    <title>
+      <%= @title || "Rails-portlet testbench" -%>
+    </title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <%= stylesheet_link_tag 'main' %>
     <%= javascript_include_tag @javascripts if @javascripts -%>
   </head>
   <body>
-    <%= render :partial => 'application/navigation' %>
-<%= yield %><br />
+    <% if @navigation==true -%>
+      <%= render :partial => 'caterpillar/application/navigation' %>
+    <% end -%>
+    <%= yield %>
+    <br />
   </body>
 </html>
 
