fixed test bench routing + navigation, some tests load

--- a/portlet_test_bench/views/caterpillar/application/index.html.erb
+++ b/portlet_test_bench/views/caterpillar/application/index.html.erb
@@ -3,67 +3,67 @@
 <h1>HTTP</h1>
 
   <%= link_to 'URL parameters',
-        :controller => :http_methods, :action => :parameter  -%><br />
+        :controller => 'Caterpillar::HttpMethods', :action => :parameter  -%><br />
 
   <%= link_to 'HTTP POST form',
-        :controller => :http_methods, :action => :post  -%><br />
+        :controller => 'Caterpillar::HttpMethods', :action => :post  -%><br />
 
   <%= link_to 'HTTP POST and GET redirect',
-        :controller => :http_methods, :action => :post_and_redirect  -%><br />
+        :controller => 'Caterpillar::HttpMethods', :action => :post_and_redirect  -%><br />
 
   <%= link_to 'HTTP referer (back)',
-        :controller => :http_methods, :action => :back  -%><br />
+        :controller => 'Caterpillar::HttpMethods', :action => :back  -%><br />
 
   <%= link_to 'HTTP redirect',
-        :controller => :http_methods, :action => :redirect -%><br />
+        :controller => 'Caterpillar::HttpMethods', :action => :redirect -%><br />
 
 
 <h1>JavaScripts</h1>
 
   <%= link_to 'Simple JavaScript',
-        :controller => :js, :action => :simple  -%><br />
+        :controller => 'Caterpillar::Js', :action => :simple  -%><br />
 
   <%= link_to 'Prototype JavaScript',
-        :controller => :js, :action => :prototype  -%><br />
+        :controller => 'Caterpillar::Js', :action => :prototype  -%><br />
 
   <%= link_to 'Script.aculo.us JavaScript',
-        :controller => :js, :action => :scriptaculous  -%><br />
+        :controller => 'Caterpillar::Js', :action => :scriptaculous  -%><br />
 
   <%= link_to 'jQuery JavaScript',
-        :controller => :js, :action => :jquery  -%><br />
+        :controller => 'Caterpillar::Js', :action => :jquery  -%><br />
 
   <%= link_to 'Drag and drop',
-        :controller => :js, :action => :dragndrop  -%><br />
+        :controller => 'Caterpillar::Js', :action => :dragndrop  -%><br />
 
   <%= link_to 'link_to :method => :post',
-        :controller => :js, :action => :link_to_post  -%><br />
+        :controller => 'Caterpillar::Js', :action => :link_to_post  -%><br />
 
 
 
 <h1>CSS</h1>
 
   <%= link_to 'Simple CSS',
-        :controller => :css, :action => :simple  -%><br />
+        :controller => 'Caterpillar::Css', :action => :simple  -%><br />
 
   <%= link_to 'CSS background image',
-        :controller => :css, :action => :background  -%><br />
+        :controller => 'Caterpillar::Css', :action => :background  -%><br />
 
 
 <h1>Misc</h1>
 
   <%= link_to 'Image resources',
-        :controller => :resource, :action => :images  -%><br />
+        :controller => 'Caterpillar::Resource', :action => :images  -%><br />
 
   <%= link_to 'Inline text',
-        :controller => :resource, :action => :inline  -%><br />
+        :controller => 'Caterpillar::Resource', :action => :inline  -%><br />
 
   <%= link_to 'Link outside the portlet',
-        :controller => :resource, :action => :exit_portlet  -%><br />
+        :controller => 'Caterpillar::Resource', :action => :exit_portlet  -%><br />
 
 
 
   <%#= link_to 'Login',
-        :controller => :login, :action => :index  -%><br />
+        :controller => 'Caterpillar::Login', :action => :index  -%><br />
 
 
 
