fixed a few issues with the test bench

--- a/portlet_test_bench/views/caterpillar/css/background.html.erb
+++ b/portlet_test_bench/views/caterpillar/css/background.html.erb
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <%= render :partial => 'application/navigation' %>
+    <%= render :partial => 'caterpillar/application/back_to_menu' %>
 
     <p class="info">
       In the div below, the background should display a Leafy Sea Dragon, defined in the css.
