--- a/portlet_test_bench/views/caterpillar/css/simple.html.erb
+++ b/portlet_test_bench/views/caterpillar/css/simple.html.erb
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <%= render :partial => 'application/navigation' %>
+    <%= render :partial => 'caterpillar/application/back_to_menu' %>
 
     <style type="text/css" id="style_in_body">
       #body_ref {
