--- a/portlet_test_bench/views/caterpillar/js/simple.html.erb
+++ b/portlet_test_bench/views/caterpillar/js/simple.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fi" lang="fi">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en<">
   <head>
     <title>Simple JavaScript test</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"></meta>
@@ -15,7 +15,7 @@
     </script>
   </head>
   <body>
-    <%= render :partial => 'application/navigation' %>
+    <%= render :partial => 'caterpillar/application/back_to_menu' %>
 
     <script type="text/javascript">
     //<![CDATA[
