--- a/portlet_test_bench/views/layouts/basic.html.erb
+++ b/portlet_test_bench/views/layouts/basic.html.erb
@@ -11,19 +11,7 @@
   </head>
   <body>
     <% if @test_is_selected==true -%>
-      <p style="
-border: 2px groove gray;
-margin-top: 10px;
-margin-bottom: 10px;
-width: auto;
-padding: 3px;
-background: #FFFFFF;
-overflow: hidden;
-margin-left: 0px;
-margin-right: 0px;
-">
-        <%= link_to "All tests", portlet_test_bench_url -%>
-      </p>
+      <%= render :partial => 'caterpillar/application/back_to_menu' %>
     <% end -%>
     <%= yield %>
     <br />
