--- a/portlet_test_bench/views/caterpillar/resource/exit_portlet.html.erb
+++ b/portlet_test_bench/views/caterpillar/resource/exit_portlet.html.erb
@@ -1,3 +1,3 @@
-<% ['http://www.rubyonrails.org', 'http://www.google.fi/search?q=jsr286', {:action => :exit_portlet}].each do |url| -%>
+<% @links.each do |url| -%>
   <%= link_to_exit_portlet "#{url}", url -%><br />
 <% end -%>
