fixes for test bench images, stylesheets and javascripts

--- a/portlet_test_bench/views/caterpillar/css/simple.html.erb
+++ b/portlet_test_bench/views/caterpillar/css/simple.html.erb
@@ -2,7 +2,7 @@
     <title>Simple CSS test</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"></meta>
 
-    <%= stylesheet_link_tag 'main' %>
+    <%= stylesheet_link_tag 'portlet_test_bench/main' %>
 
     <style type="text/css" id="style_in_head">
       /* simple.html.erb */
