--- a/portlet_test_bench/views/caterpillar/js/dragndrop.html.erb
+++ b/portlet_test_bench/views/caterpillar/js/dragndrop.html.erb
@@ -4,9 +4,9 @@
 <div id="draggables" class="dragdrop">
   <span class="dragdrop_id">Draggables</span>
   <div id="java">
-    <%= image_tag 'java.png', :id => :java_handle, :class => :draggable -%>
+    <%= image_tag 'portlet_test_bench/java.png', :id => :java_handle, :class => :draggable -%>
   </div>
-  <%= image_tag 'ruby.gif', :id => :ruby, :class => :draggable -%>
+  <%= image_tag 'portlet_test_bench/ruby.gif', :id => :ruby, :class => :draggable -%>
 </div>
 
 <%= draggable_element :java, :revert => true, :handle => "'java_handle'" -%>
