--- a/portlet_test_bench/views/caterpillar/css/background.html.erb
+++ b/portlet_test_bench/views/caterpillar/css/background.html.erb
@@ -2,13 +2,13 @@
     <title>Simple CSS test</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"></meta>
 
-    <%= stylesheet_link_tag 'main' %>
+    <%= stylesheet_link_tag 'portlet_test_bench/main' %>
 
     <style type="text/css">
       /* Leafy Sea Dragon */
 
       #background_image {
-      background-image: url('/images/animals/Leafy_Sea_Dragon_1.jpg');
+      background-image: url('/images/portlet_test_bench/Leafy_Sea_Dragon_1.jpg');
       background-repeat: no-repeat;
       border: 5px outset gray;
       width: 297px;
