--- a/portlet_test_bench/views/caterpillar/js/simple.html.erb
+++ b/portlet_test_bench/views/caterpillar/js/simple.html.erb
@@ -5,7 +5,7 @@
     <title>Simple JavaScript test</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"></meta>
 
-    <%= javascript_include_tag 'main' %>
+    <%= javascript_include_tag 'portlet_test_bench/main' %>
     <script type="text/javascript">
     //<![CDATA[
       function head_alert() {
