--- a/portlet_test_bench/views/layouts/basic.html.erb
+++ b/portlet_test_bench/views/layouts/basic.html.erb
@@ -6,7 +6,7 @@
       <%= @title || "Rails-portlet testbench" -%>
     </title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <%= stylesheet_link_tag 'main' %>
+    <%= stylesheet_link_tag 'portlet_test_bench/main' %>
     <%= javascript_include_tag @javascripts if @javascripts -%>
   </head>
   <body>
