--- a/portlet_test_bench/views/caterpillar/application/index.html.erb
+++ b/portlet_test_bench/views/caterpillar/application/index.html.erb
@@ -67,10 +67,11 @@ These are isolated test cases of the Rails-portlet. These cases cover the most c
         :controller => 'Caterpillar::Resource', :action => :exit_portlet  -%><br />
 
   <%= link_to 'Liferay session variables',
-        :controller => 'Caterpillar::Liferay',
-        :action => :session_variables,
-        :uid => '%UID%',
-        :gid => '%GID%' -%><br />
+        url_for(
+          :controller => 'Caterpillar::Liferay',
+          :action => :session_variables
+        )+'/uid/%UID%/gid/%GID%'
+  -%><br />
 
 
   <%#= link_to 'Login',
