added portlet test for flash messages

--- a/portlet_test_bench/views/caterpillar/application/index.html.erb
+++ b/portlet_test_bench/views/caterpillar/application/index.html.erb
@@ -73,10 +73,8 @@ These are isolated test cases of the Rails-portlet. These cases cover the most c
         )+'/uid/%UID%/gid/%GID%'
   -%><br />
 
-
-  <%#= link_to 'Login',
-        :controller => 'Caterpillar::Login', :action => :index  -%><br />
-
+  <%= link_to 'Flash message',
+        :controller => 'Caterpillar::Session', :action => :flash_msg -%><br />
 
 
 </body>
