test bench: add test for form POST that exits the portlet

--- a/portlet_test_bench/views/caterpillar/http_methods/post.html.erb
+++ b/portlet_test_bench/views/caterpillar/http_methods/post.html.erb
@@ -38,6 +38,15 @@
     <% end -%>
   </span>
 
+	<h1>Exit portlet w/ POST:</h1>
+Sometimes it is useful to send an action outside the portlet.
+Test this by pressing this button:
+
+	<form action="http://www.google.com/search?exit_portlet=true">
+		<input name="q" value="success" type="hidden" />
+		<input type="submit" value="test" />
+	</form>
+
 
 
 </div>
