simple cookie test

--- a/portlet_test_bench/views/caterpillar/application/index.html.erb
+++ b/portlet_test_bench/views/caterpillar/application/index.html.erb
@@ -76,5 +76,7 @@ These are isolated test cases of the Rails-portlet. These cases cover the most c
   <%= link_to 'Flash message',
         :controller => 'Caterpillar::Session', :action => :flash_msg -%><br />
 
+  <%= link_to 'Cookies and session',
+        :controller => 'Caterpillar::Session', :action => :cookie -%><br />
 
 </body>
