--- a/portlet_test_bench/views/caterpillar/application/index.html.erb
+++ b/portlet_test_bench/views/caterpillar/application/index.html.erb
@@ -1,12 +1,47 @@
 <body>
-<h1>
+<style type="text/css">
+body {
+background: white;
+}
+#testBenchContainer {
+  background: #FFFFCC;
+  border: 1px solid #B9B9B9;
+  padding: 8px;
+  font-size: 11px;
+  line-height: 15px;
+}
+#mainTitle {
+  border-bottom: 1px solid #B9B9B9;
+  color: #990000;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  padding: 0 0 0 15px;
+}
+h1 {
+  border: 1px solid #B9B9B9;
+  color: #990000;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 4px 0 3px 25px;
+  background: white;
+}
+.testContainer {
+  padding: 12px;
+}
+</style>
+
+<div id="testBenchContainer">
+
+<div id="mainTitle">
 Rails-portlet test bench
-</h1>
+</div>
 <p style="font-size: 14px;">
-These are isolated test cases of the Rails-portlet. These cases cover the most common techniques used in dynamic web applications. The <%= link_to_exit_portlet 'source code', 'http://rails-portlet.rubyforge.org/svn/trunk/caterpillar/portlet_test_bench/' -%> can be used as a reference for using the same features in other Rails apps.
+These are isolated test cases of the Rails-portlet, for manual testing in the browser. The <%= link_to_exit_portlet 'source code', 'http://rails-portlet.rubyforge.org/svn/trunk/caterpillar/portlet_test_bench/' -%> can be used as a reference for using the same features in other Rails apps.
 </p>
 
 <h1>HTTP</h1>
+<div class="testContainer">
 
   <%= link_to 'URL parameter passing',
         :controller => 'Caterpillar::HttpMethods', :action => :parameter  -%><br />
@@ -23,8 +58,11 @@ These are isolated test cases of the Rails-portlet. These cases cover the most c
   <%= link_to 'HTTP redirect',
         :controller => 'Caterpillar::HttpMethods', :action => :redirect -%><br />
 
+</div>
+
 
 <h1>JavaScripts</h1>
+<div class="testContainer">
 
   <%= link_to 'Simple JavaScript',
         :controller => 'Caterpillar::Js', :action => :simple  -%><br />
@@ -44,9 +82,11 @@ These are isolated test cases of the Rails-portlet. These cases cover the most c
   <%= link_to 'link_to :method => :post',
         :controller => 'Caterpillar::Js', :action => :link_to_post  -%><br />
 
+</div>
 
 
 <h1>CSS</h1>
+<div class="testContainer">
 
   <%= link_to 'Simple CSS',
         :controller => 'Caterpillar::Css', :action => :simple  -%><br />
@@ -54,8 +94,11 @@ These are isolated test cases of the Rails-portlet. These cases cover the most c
   <%= link_to 'CSS background image',
         :controller => 'Caterpillar::Css', :action => :background  -%><br />
 
+</div>
+
 
 <h1>Misc</h1>
+<div class="testContainer">
 
   <%= link_to 'Image resources',
         :controller => 'Caterpillar::Resource', :action => :images  -%><br />
@@ -76,7 +119,26 @@ These are isolated test cases of the Rails-portlet. These cases cover the most c
   <%= link_to 'Flash message',
         :controller => 'Caterpillar::Session', :action => :flash_msg -%><br />
 
-  <%= link_to 'Cookies and session',
-        :controller => 'Caterpillar::Session', :action => :cookie -%><br />
+</div>
 
+
+<h1>JUnit</h1>
+
+The JUnit tests are used for automatic testing and they output XML. 
+
+<div class="testContainer">
+
+  <%= link_to 'Session cookie',
+        :controller => 'Caterpillar::Junit', :action => :session_cookie -%><br />
+
+  <%= link_to 'Redirect',
+        :controller => 'Caterpillar::Junit', :action => :redirect -%><br />
+
+  <%= link_to 'Session cookies & redirect',
+        :controller => 'Caterpillar::Junit', :action => :cookies_with_redirect -%><br />
+
+</div>
+
+
+</div>
 </body>
