--- a/portlet_test_bench/views/caterpillar/junit/xslt_simple.html.erb
+++ b/portlet_test_bench/views/caterpillar/junit/xslt_simple.html.erb
@@ -1,8 +1,12 @@
 <html>
   <head>
     <title>Portlet title</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"></meta>
   </head>
   <body>
     Portlet body
+    <div>
+    Single div
+    </div>
   </body>
 </html>
