--- a/portlet_test_bench/views/caterpillar/junit/xhr.html.erb
+++ b/portlet_test_bench/views/caterpillar/junit/xhr.html.erb
@@ -1,2 +1,6 @@
-<p><%= xhr_get_tag %></p>
-<p><%= xhr_post_tag %></p>
+<div id="xhr_onclick">
+  <%= xhr_onclick_tag %>
+</div>
+<div id="xhr_form">
+  <%= xhr_form_tag %>
+</div>
