--- a/portlet_test_bench/views/caterpillar/junit/doctype_undefined.html.erb
+++ b/portlet_test_bench/views/caterpillar/junit/doctype_undefined.html.erb
@@ -2,6 +2,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Portlet title</title>
+    <base href="http://127.0.0.10:3000/" />
   </head>
   <body>
     Portlet content
