--- a/portlet_test_bench/views/caterpillar/application/index.html.erb
+++ b/portlet_test_bench/views/caterpillar/application/index.html.erb
@@ -10,7 +10,7 @@ background: white;
   font-size: 11px;
   line-height: 15px;
 }
-#mainTitle {
+#testBenchContainer h1 {
   border-bottom: 1px solid #B9B9B9;
   color: #990000;
   font-size: 18px;
@@ -18,7 +18,7 @@ background: white;
   margin-bottom: 20px;
   padding: 0 0 0 15px;
 }
-h1 {
+#testBenchContainer h2 {
   border: 1px solid #B9B9B9;
   color: #990000;
   font-size: 14px;
@@ -33,14 +33,13 @@ h1 {
 
 <div id="testBenchContainer">
 
-<div id="mainTitle">
-Rails-portlet test bench
-</div>
+<h1>Rails-portlet test bench</h1>
+
 <p style="font-size: 14px;">
 These are isolated test cases of the Rails-portlet, for manual testing in the browser. The <%= link_to_exit_portlet 'source code', 'http://rails-portlet.rubyforge.org/svn/trunk/caterpillar/portlet_test_bench/' -%> can be used as a reference for using the same features in other Rails apps.
 </p>
 
-<h1>HTTP</h1>
+<h2>HTTP</h2>
 <div class="testContainer">
 
   <%= link_to 'URL parameter passing',
@@ -61,7 +60,7 @@ These are isolated test cases of the Rails-portlet, for manual testing in the br
 </div>
 
 
-<h1>JavaScripts</h1>
+<h2>JavaScripts</h2>
 <div class="testContainer">
 
   <%= link_to 'Simple JavaScript',
@@ -85,7 +84,7 @@ These are isolated test cases of the Rails-portlet, for manual testing in the br
 </div>
 
 
-<h1>CSS</h1>
+<h2>CSS</h2>
 <div class="testContainer">
 
   <%= link_to 'Simple CSS',
@@ -97,7 +96,7 @@ These are isolated test cases of the Rails-portlet, for manual testing in the br
 </div>
 
 
-<h1>Misc</h1>
+<h2>Misc</h2>
 <div class="testContainer">
 
   <%= link_to 'Image resources',
@@ -122,7 +121,7 @@ These are isolated test cases of the Rails-portlet, for manual testing in the br
 </div>
 
 
-<h1>JUnit</h1>
+<h2>JUnit</h2>
 
 The JUnit tests are used for automatic testing and they output XML. 
 
