--- a/portlet_test_bench/views/caterpillar/http_methods/post.html.erb
+++ b/portlet_test_bench/views/caterpillar/http_methods/post.html.erb
@@ -1,7 +1,8 @@
 <div id="http_post">
   <h1>POST test</h1>
 
-  <div id="http_postform">
+  <div class="http_postform">
+  <h2>Regular POST</h2>
     <%= form_tag :action => "post" %>
       <p>
         <span>Input text:</span>
@@ -13,12 +14,42 @@
         <input type="checkbox" name="checkbox" value="yay" true />
       </p>
 
-      <p id="submit_tags">
-        <input type="submit" value="Submit values" />
-        <input type="reset" value="Reset to defaults" />
+      <p class="submit_tags">
+        <input type="submit" value="Submit" />
       </p>
     </form>
   </div>
+
+
+  <h2>POST with accept-charset</h2>
+  <div class="http_postform">
+    <% form_tag({ :action => "post" }, {:'accept-charset' => "UTF-8"} ) do %>
+      <p>
+        <%= text_field_tag "msg", "å ä ö", :size => 12 %>
+      </p>
+      <p class="submit_tags">
+        <%= submit_tag 'Submit as utf8' %>
+      </p>
+    <% end %>
+  </div>
+
+
+  <h2>Exit portlet w/ POST:</h2>
+  <p>
+	Sometimes it is useful to send an action outside the portlet.
+	Test this with this button:
+  </p>
+  <div class="http_postform">
+    <form action="http://www.google.com/search?exit_portlet=true">
+      <input name="q" value="HTTP POST form" type="hidden" />
+      <p class="submit_tags">
+        <input type="submit" value="Google search" />
+      </p>
+    </form>
+  </div>
+
+
+  <hr />
 
 
   <h2>Message from last POST:</h2>
@@ -37,16 +68,5 @@
       <% end %>
     <% end -%>
   </span>
-
-	<h1>Exit portlet w/ POST:</h1>
-Sometimes it is useful to send an action outside the portlet.
-Test this by pressing this button:
-
-	<form action="http://www.google.com/search?exit_portlet=true">
-		<input name="q" value="success" type="hidden" />
-		<input type="submit" value="test" />
-	</form>
-
-
 
 </div>
