--- a/portlet_test_bench/views/caterpillar/http_methods/post.html.erb
+++ b/portlet_test_bench/views/caterpillar/http_methods/post.html.erb
@@ -25,7 +25,7 @@
   <div class="http_postform">
     <% form_tag({ :action => "post" }, {:'accept-charset' => "UTF-8"} ) do %>
       <p>
-        <%= text_field_tag "msg", "å ä ö", :size => 12 %>
+        <%= text_field_tag "msg", "å ä ö ♥", :size => 12 %>
       </p>
       <p class="submit_tags">
         <%= submit_tag 'Submit as utf8' %>
