base for checking the time with XHR

--- a/portlet_test_bench/views/caterpillar/application/index.html.erb
+++ b/portlet_test_bench/views/caterpillar/application/index.html.erb
@@ -96,6 +96,15 @@ These are isolated test cases of the Rails-portlet, for manual testing in the br
 </div>
 
 
+<h2>XHR</h2>
+<div class="testContainer">
+
+  <%= link_to 'Get time',
+        :controller => 'Caterpillar::Xhr', :action => :time  -%><br />
+
+</div>
+
+
 <h2>Misc</h2>
 <div class="testContainer">
 
