--- a/portlet_test_bench/views/caterpillar/application/index.html.erb
+++ b/portlet_test_bench/views/caterpillar/application/index.html.erb
@@ -99,8 +99,11 @@ These are isolated test cases of the Rails-portlet, for manual testing in the br
 <h2>XHR</h2>
 <div class="testContainer">
 
-  <%= link_to 'Get time',
-        :controller => 'Caterpillar::Xhr', :action => :time  -%><br />
+  <%= link_to 'Get time (Prototype)',
+        :controller => 'Caterpillar::Xhr', :action => :prototype  -%><br />
+
+  <%= link_to 'Get time (jQuery)',
+        :controller => 'Caterpillar::Xhr', :action => :jquery  -%><br />
 
 </div>
 
