--- a/portlet_test_bench/views/caterpillar/xhr/time.html.erb
+++ b/portlet_test_bench/views/caterpillar/xhr/time.html.erb
@@ -1,1 +1,29 @@
-What time it is?
+<% if @javascripts.include? 'prototype' %>
+<h2>Prototype</h2>
+<p>
+	<%= link_to_remote 'What time it is?', :update => 'result1', :url => {:action => 'get_time'} %>
+</p>
+<div id="result1"></div>
+
+
+<% else %>
+<h2>jQuery</h2>
+<p>
+  <a href="#" id="jq_link">What time it is?</a>
+  <script type="text/javascript">
+  $('#jq_link').click(function(){
+    $.ajax({
+      url: "<%= url_for :action => 'get_time' %>",
+      type: 'POST',
+      data: '',
+      success: function(data) {
+        $('#result2').html(data);
+      }
+    });
+  });
+  </script>
+</p>
+<div id="result2"></div>
+
+
+<% end %>
