added /caterpillar view

--- a/portlet_test_bench/views/caterpillar/application/index.html.erb
+++ b/portlet_test_bench/views/caterpillar/application/index.html.erb
@@ -1,155 +1,5 @@
-<body>
-<style type="text/css">
-body {
-background: white;
-}
-#testBenchContainer {
-  background: #FFFFCC;
-  border: 1px solid #B9B9B9;
-  padding: 8px;
-  font-size: 11px;
-  line-height: 15px;
-}
-#testBenchContainer h1 {
-  border-bottom: 1px solid #B9B9B9;
-  color: #990000;
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 20px;
-  padding: 0 0 0 15px;
-}
-#testBenchContainer h2 {
-  border: 1px solid #B9B9B9;
-  color: #990000;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 4px 0 3px 25px;
-  background: white;
-}
-.testContainer {
-  padding: 12px;
-}
-</style>
+Caterpillar <%= Caterpillar::VERSION %>
 
-<div id="testBenchContainer">
+<hr />
 
-<h1>Rails-portlet test bench</h1>
-
-<p style="font-size: 14px;">
-These are isolated test cases of the Rails-portlet, for manual testing in the browser. The <%= link_to_exit_portlet 'source code', 'http://rails-portlet.rubyforge.org/svn/trunk/caterpillar/portlet_test_bench/' -%> can be used as a reference for using the same features in other Rails apps.
-</p>
-
-<h2>HTTP</h2>
-<div class="testContainer">
-
-  <%= link_to 'URL parameter passing',
-        :controller => 'Caterpillar::HttpMethods', :action => :parameter  -%><br />
-
-  <%= link_to 'HTTP POST form',
-        :controller => 'Caterpillar::HttpMethods', :action => :post  -%><br />
-
-  <%= link_to 'HTTP POST and GET redirect',
-        :controller => 'Caterpillar::HttpMethods', :action => :post_and_redirect  -%><br />
-
-  <%= link_to 'HTTP referer (back)',
-        :controller => 'Caterpillar::HttpMethods', :action => :back  -%><br />
-
-  <%= link_to 'HTTP redirect',
-        :controller => 'Caterpillar::HttpMethods', :action => :redirect -%><br />
-
-</div>
-
-
-<h2>JavaScripts</h2>
-<div class="testContainer">
-
-  <%= link_to 'Simple JavaScript',
-        :controller => 'Caterpillar::Js', :action => :simple  -%><br />
-
-  <%= link_to 'Prototype JavaScript',
-        :controller => 'Caterpillar::Js', :action => :prototype  -%><br />
-
-  <%= link_to 'Script.aculo.us JavaScript',
-        :controller => 'Caterpillar::Js', :action => :scriptaculous  -%><br />
-
-  <%= link_to 'jQuery JavaScript',
-        :controller => 'Caterpillar::Js', :action => :jquery  -%><br />
-
-  <%= link_to 'Drag and drop',
-        :controller => 'Caterpillar::Js', :action => :dragndrop  -%><br />
-
-  <%= link_to 'link_to :method => :post',
-        :controller => 'Caterpillar::Js', :action => :link_to_post  -%><br />
-
-</div>
-
-
-<h2>CSS</h2>
-<div class="testContainer">
-
-  <%= link_to 'Simple CSS',
-        :controller => 'Caterpillar::Css', :action => :simple  -%><br />
-
-  <%= link_to 'CSS background image',
-        :controller => 'Caterpillar::Css', :action => :background  -%><br />
-
-</div>
-
-
-<h2>XHR</h2>
-<div class="testContainer">
-
-  <%= link_to 'Get time (Prototype)',
-        :controller => 'Caterpillar::Xhr', :action => :prototype  -%><br />
-
-  <%= link_to 'Get time (jQuery)',
-        :controller => 'Caterpillar::Xhr', :action => :jquery  -%><br />
-
-</div>
-
-
-<h2>Misc</h2>
-<div class="testContainer">
-
-  <%= link_to 'Image resources',
-        :controller => 'Caterpillar::Resource', :action => :images  -%><br />
-
-  <%= link_to 'Inline text',
-        :controller => 'Caterpillar::Resource', :action => :inline  -%><br />
-
-  <%= link_to 'Link outside the portlet',
-        :controller => 'Caterpillar::Resource', :action => :exit_portlet  -%><br />
-
-  <%= link_to 'Liferay session variables',
-        url_for(
-          :controller => 'Caterpillar::Liferay',
-          :action => :session_variables
-        )+'/uid/%UID%/gid/%GID%'
-  -%><br />
-
-  <%= link_to 'Flash message',
-        :controller => 'Caterpillar::Session', :action => :flash_msg -%><br />
-
-</div>
-
-
-<h2>JUnit</h2>
-
-The JUnit tests are used for automatic testing and they output XML. 
-
-<div class="testContainer">
-
-  <%= link_to 'Session cookie',
-        :controller => 'Caterpillar::Junit', :action => :session_cookie -%><br />
-
-  <%= link_to 'Redirect',
-        :controller => 'Caterpillar::Junit', :action => :redirect -%><br />
-
-  <%= link_to 'Session cookies & redirect',
-        :controller => 'Caterpillar::Junit', :action => :cookies_with_redirect -%><br />
-
-</div>
-
-
-</div>
-</body>
+Includes <%= link_to 'portlet test bench', portlet_test_bench_url %>.
