fix conflict with Liferay theme

--- a/portlet_test_bench/views/caterpillar/application/portlet_test_bench.html.erb
+++ b/portlet_test_bench/views/caterpillar/application/portlet_test_bench.html.erb
@@ -10,7 +10,7 @@ background: white;
   font-size: 11px;
   line-height: 15px;
 }
-#testBenchContainer h1 {
+h1#testBenchContainer {
   border-bottom: 1px solid #B9B9B9;
   color: #990000;
   font-size: 18px;
@@ -18,7 +18,7 @@ background: white;
   margin-bottom: 20px;
   padding: 0 0 0 15px;
 }
-#testBenchContainer h2 {
+h2#testBenchContainer {
   border: 1px solid #B9B9B9;
   color: #990000;
   font-size: 14px;
