fixed return link in test bench

--- a/portlet_test_bench/views/caterpillar/application/_back_to_menu.html.erb
+++ b/portlet_test_bench/views/caterpillar/application/_back_to_menu.html.erb
@@ -9,5 +9,5 @@ overflow: hidden;
 margin-left: 0px;
 margin-right: 0px;
 ">
-  <%= link_to "All tests", portlet_test_bench_url -%>
+  <%= link_to "All tests", portlet_test_bench_path -%>
 </p>
