refactor shared secret to portlets.rb - requires config file update for existing installations

--- a/portlet_test_bench/views/caterpillar/application/portlet_test_bench.html.erb
+++ b/portlet_test_bench/views/caterpillar/application/portlet_test_bench.html.erb
@@ -143,6 +143,11 @@ These are isolated test cases of the Rails-portlet, for manual testing in the br
   <%= link_to 'Portlet namespace',
         :controller => 'Caterpillar::Session', :action => :namespace -%><br />
 
+
+  <%= link_to 'Portlet request authorization via shared secret',
+        :controller => 'Caterpillar::Liferay', :action => :authorized_sessions  -%><br />
+
+
 </div>
 
 
